<resources>
    <string name="app_name">tweetseek</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="location">location</string>
    <string name="submit">submit</string>
    <string name="color">color</string>
    <string name="size">size</string>
    <string name="bird_information">BIRD INFORMATION</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="input_title">bird identification</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_out">sign out</string>
    <string name="delete_account">delete account</string>
    <string name="update_password">update password</string>
    <string name="new_password">new password</string>
    <string name="email_example_com">email@example.com</string>
    <string name="create_an_account">create an account</string>
    <string name="identification_history">Identification History</string>
    <string name="bird_name">Bird Name</string>
    <string name="bird_image" />


</resources>