<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.AccountSettingsActivity">

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:scaleType="centerCrop"
        android:src="@drawable/check"
        android:background="@color/red"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <!-- Email Display -->
        <TextView
            android:id="@+id/emailText"
            android:layout_width="@dimen/button_width_m"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/email_example_com"
            android:textColor="@color/black"
            android:fontFamily="monospace"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:padding="8dp" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="@dimen/button_width_m"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_between"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:textColor="@color/red"
            android:textColorHint="@color/black"
            android:fontFamily="monospace"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <!-- Update Password Button -->
        <Button
            android:id="@+id/updatePasswordButton"
            android:layout_width="@dimen/button_width_s"
            android:layout_height="77dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/red"
            android:fontFamily="monospace"
            android:text="@string/update_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

        <!-- Delete Account Button -->
        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="@dimen/button_width_s"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/light_green"
            android:fontFamily="monospace"
            android:text="@string/delete_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp" />

        <!-- Sign Out Button -->
        <Button
            android:id="@+id/signOutButton"
            android:layout_width="@dimen/button_width_s"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:backgroundTint="@color/light_green"
            android:fontFamily="monospace"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp" />
    </LinearLayout>
</RelativeLayout>
